k8s/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sendr-frontend
  namespace: sendr
spec:
  selector:
    app: sendr-frontend
  ports:
    - port: 80
      targetPort: 8080
      name: http
